Pagination,Sorting,SearchBox

--- a/Views/Movies/Details.cshtml
+++ b/Views/Movies/Details.cshtml
@@ -43,6 +43,7 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.MovieId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-warning" role="button" asp-action="Edit" asp-route-id="@Model?.MovieId">Edit</a> |
+ 
+    <a  class="btn btn-secondary " role="button" asp-action="Index">Back to List</a>
 </div>
