--- a/Views/Movies/Edit.cshtml
+++ b/Views/Movies/Edit.cshtml
@@ -38,7 +38,7 @@
                 <input asp-for="MovieLength" class="form-control" />
                 <span asp-validation-for="MovieLength" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mt-3">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
@@ -46,7 +46,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a  class="btn btn-secondary  mt-3" role="button" asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
