--- a/Views/MovieGenres/Create.cshtml
+++ b/Views/MovieGenres/Create.cshtml
@@ -24,7 +24,7 @@
                     </label>
                 </div>
             }
-            <div class="form-group">
+            <div class="form-group mt-3">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
@@ -32,7 +32,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a  class="btn btn-secondary mt-3 " role="button" asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
