--- a/Views/MovieGenres/Delete.cshtml
+++ b/Views/MovieGenres/Delete.cshtml
@@ -35,6 +35,6 @@
         <input type="hidden" asp-for="MovieId" />
         <input type="hidden" asp-for="GenreId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a  class="btn btn-secondary " role="button" asp-action="Index">Back to List</a>
     </form>
 </div>
