--- a/Views/MovieGenres/Details.cshtml
+++ b/Views/MovieGenres/Details.cshtml
@@ -31,6 +31,8 @@
     </dl>
 </div>
 <div>
+
     @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    <a asp-action="Index">Back to List</a>
+
+   <a  class="btn btn-secondary " role="button" asp-action="Index">Back to List</a>
 </div>
