--- a/Views/MovieGenres/Edit.cshtml
+++ b/Views/MovieGenres/Edit.cshtml
@@ -25,7 +25,7 @@
                 <label asp-for="Genre.Name" class="control-label"></label>
                 <select asp-for="GenreId" class="form-control" asp-items="ViewBag.GenreId"></select>
             </div>
-            <div class="form-group">
+            <div class="form-group mt-3">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
@@ -33,7 +33,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+     <a  class="btn btn-secondary  mt-3" role="button" asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
