--- a/Views/Genres/Index.cshtml
+++ b/Views/Genres/Index.cshtml
@@ -3,42 +3,48 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Genres</h1>
+
+<p>
+    <a class="btn btn-primary" role="button" asp-action="Create">Create New</a>
+</p>
+<div class="row">
+    <div class="col-md-9">
+        <table class="table table-striped table-dark">
+            <thead>
+                <tr>
+                    <th>
+
+                        <a asp-action="Index" asp-route-sortOrder="@ViewData["NameSortParm"]" asp-route-currentFilter="@ViewData["CurrentFilter"]"> Name</a>
+
+                    </th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Name)
+                        </td>
+                        <td class="d-flex justify-content-center align-items-center gap-2">
+
+                            <a class="btn btn-warning" role="button" asp-action="Edit" asp-route-id="@item.GenreId">Edit</a> |
+
+                            <a class="btn btn-info" role="button" asp-action="Details" asp-route-id="@item.GenreId">Details</a> |
+
+                            <a class="btn btn-danger" role="button" asp-action="Delete" asp-route-id="@item.GenreId">Delete</a>
 
 
-     <a class="btn btn-primary" role="button" asp-action="Create">Create New</a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
 
-<table class="table table-hover">
-    <thead>
-        <tr>
-            <th>
-
-             <a asp-action="Index" asp-route-sortOrder="@ViewData["NameSortParm"]" asp-route-currentFilter="@ViewData["CurrentFilter"]"> Name</a>
-
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-  
-                   <a class="btn btn-warning" role="button" asp-action="Edit" asp-route-id="@item.GenreId">Edit</a> |
-
-                     <a class="btn btn-info" role="button" asp-action="Details" asp-route-id="@item.GenreId">Details</a> |
-
-                <a class="btn btn-danger" role="button" asp-action="Delete" asp-route-id="@item.GenreId">Delete</a>
- 
-
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
 
 @{
     var prevDisabled = !Model.HasPreviousPage ? "disabled" : "";
