--- a/Views/Movies/Index.cshtml
+++ b/Views/Movies/Index.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Movies</h1>
 
 <p>
      <a class="btn btn-primary" role="button" asp-action="Create">Create New</a>
@@ -28,7 +28,7 @@
 </form>
    
 
-<table class="table table-hover">
+<table class="table table-striped table-dark">
     <thead>
         <tr>
 
