--- a/Views/Movies/Create.cshtml
+++ b/Views/Movies/Create.cshtml
@@ -37,6 +37,10 @@
                 <input asp-for="MovieLength" class="form-control" />
                 <span asp-validation-for="MovieLength" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="Director" class="control-label"></label>
+                <select asp-for="DirectorId" class ="form-control" asp-items="ViewBag.DirectorId"></select>
+            </div>
             <div class="form-group mt-3">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
@@ -45,7 +49,7 @@
 </div>
 
 <div>
-    <a  class="btn btn-secondary mt-3 " role="button" asp-action="Index">Back to List</a>
+    <a class="btn btn-secondary mt-3" asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
