--- a/Views/Movies/Delete.cshtml
+++ b/Views/Movies/Delete.cshtml
@@ -41,11 +41,17 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.MovieLength)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Director)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Director.FirstName)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="MovieId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-       <a  class="btn btn-secondary " role="button" asp-action="Index">Back to List</a>
+        <a class="btn btn-secondary" asp-action="Index">Back to List</a>
     </form>
 </div>
