--- a/Views/Movies/Details.cshtml
+++ b/Views/Movies/Details.cshtml
@@ -40,10 +40,15 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.MovieLength)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Director)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Director.FirstName)
+        </dd>
     </dl>
 </div>
 <div>
-    <a class="btn btn-warning" role="button" asp-action="Edit" asp-route-id="@Model?.MovieId">Edit</a> |
- 
-    <a  class="btn btn-secondary " role="button" asp-action="Index">Back to List</a>
+    <a class="btn btn-warning" asp-action="Edit" asp-route-id="@Model?.MovieId">Edit</a> |
+    <a class="btn btn-secondary" asp-action="Index">Back to List</a>
 </div>
