--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="MovieActors" asp-action="Index">Movie Actors</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Directors" asp-action="Index">Director</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
