--- a/Views/Actors/Index.cshtml
+++ b/Views/Actors/Index.cshtml
@@ -13,6 +13,9 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.Image)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.FirstName)
             </th>
             <th>
@@ -28,26 +31,39 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nationality)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.BirthDate)
-            </td>
-            <td>
-                <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.ActorId">Edit</a> |
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td class="align-middle">
+                    @if (item.Image != null)
+                    {
+                        var base64 = Convert.ToBase64String(item.Image);
+                        var img = string.Format("data:image/jpg;base64,{0}", base64);
+                        <img src="@img" class="rounded-circle" style="max-width: 150px" />
+                    }
+                    else
+                    {
+                        <img src="~/images/noimage.jpg" class="rounded-circle" style="max-width: 150px" />
+                    }
+                </td>
+                <td class="align-middle">
+                    @Html.DisplayFor(modelItem => item.FirstName)
+                </td>
+                <td class="align-middle">
+                    @Html.DisplayFor(modelItem => item.LastName)
+                </td>
+                <td class="align-middle">
+                    @Html.DisplayFor(modelItem => item.Nationality)
+                </td>
+                <td class="align-middle">
+                    @Html.DisplayFor(modelItem => item.BirthDate)
+                </td>
+                <td class="align-middle">
+                    <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.ActorId">Edit</a> |
                     <a class="btn btn-info" asp-action="Details" asp-route-id="@item.ActorId">Details</a> |
                     <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.ActorId">Delete</a>
-            </td>
-        </tr>
-}
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
