--- a/Views/Movies/Create.cshtml
+++ b/Views/Movies/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form method="post" enctype="multipart/form-data" asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
@@ -40,6 +40,10 @@
             <div class="form-group">
                 <label asp-for="Director" class="control-label"></label>
                 <select asp-for="DirectorId" class ="form-control" asp-items="ViewBag.DirectorId"></select>
+            </div>
+            <div class="form-group mt-3">
+                <label asp-for="Image" class="control-label"></label>
+                <input asp-for="Image" type="file" name="file"/>
             </div>
             <div class="form-group mt-3">
                 <input type="submit" value="Create" class="btn btn-primary" />
