--- a/Views/Movies/Details.cshtml
+++ b/Views/Movies/Details.cshtml
@@ -46,6 +46,21 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Director.FirstName)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Image)
+        </dt>
+        <dd class="col-sm-10">
+            @if(Model.Image != null)
+            {
+                var base64 = Convert.ToBase64String(Model.Image);
+                var img = string.Format("data:image/jpg;base64,{0}", base64);
+                <img src="@img" width="100px" height="100px" />
+            }
+            else
+            {
+                <img src="~/images/noimage.jpg" width="100px" height="100px" />
+            }
+        </dd>
     </dl>
 </div>
 <div>
