--- a/Views/Actors/Index.cshtml
+++ b/Views/Actors/Index.cshtml
@@ -39,11 +39,11 @@
                     {
                         var base64 = Convert.ToBase64String(item.Image);
                         var img = string.Format("data:image/jpg;base64,{0}", base64);
-                        <img src="@img" class="rounded-circle" style="max-width: 150px" />
+                        <img src="@img" class="rounded-circle" style="max-width: 150px; height:150px" />
                     }
                     else
                     {
-                        <img src="~/images/noimage.jpg" class="rounded-circle" style="max-width: 150px" />
+                        <img src="~/images/noimage.jpg" class="rounded-circle" style="max-width: 150px; height:150px" />
                     }
                 </td>
                 <td class="align-middle">
