--- a/Views/Directors/Edit.cshtml
+++ b/Views/Directors/Edit.cshtml
@@ -3,14 +3,14 @@
 @{
     ViewData["Title"] = "Edit";
 }
-
+@*
 <h1>Edit</h1>
 
 <h4>Director</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form method="post" enctype="multipart/form-data" asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="DirectorId" />
             <div class="form-group">
@@ -33,6 +33,10 @@
                 <input asp-for="BirthDate" class="form-control" />
                 <span asp-validation-for="BirthDate" class="text-danger"></span>
             </div>
+            <div class="form-group mt-3">
+                <label asp-for="Image" class="control-label"></label>
+                <input asp-for="Image" type="file" name="file" />
+            </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
@@ -43,7 +47,50 @@
 <div>
     <a class="btn btn-secondary" asp-action="Index">Back to List</a>
 </div>
+*@
+<div class="row text">
+    <div class="col-md-8 offset-2">
+        <p>
+            <h1 class="text-center">Update Director</h1>
+        </p>
+        <div class="row">
+            <div class="col-md-8 offset-2">
+                <form method="post" enctype="multipart/form-data" asp-action="Edit">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-group">
+                        <label asp-for="FirstName" class="control-label"></label>
+                        <input asp-for="FirstName" class="form-control" />
+                        <span asp-validation-for="FirstName" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="LastName" class="control-label"></label>
+                        <input asp-for="LastName" class="form-control" />
+                        <span asp-validation-for="LastName" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Nationality" class="control-label"></label>
+                        <input asp-for="Nationality" class="form-control" />
+                        <span asp-validation-for="Nationality" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="BirthDate" class="control-label"></label>
+                        <input asp-for="BirthDate" class="form-control" />
+                        <span asp-validation-for="BirthDate" class="text-danger"></span>
+                    </div>
+                    <div class="form-group mt-3">
+                        <label asp-for="Image" class="control-label"></label>
+                        <input asp-for="Image" type="file" name="file" />
+                    </div>
 
+                    <div class="form-group mt-3">
+                        <input type="submit" value="Save" class="btn btn-outline-primary float-right" />
+                        <a class="btn btn-outline-secondary" asp-action="Index">Back to List</a>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
