--- a/Views/Directors/Index.cshtml
+++ b/Views/Directors/Index.cshtml
@@ -13,6 +13,9 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.Image)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.FirstName)
             </th>
             <th>
@@ -30,19 +33,31 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
-            <td>
+            <td class="align-middle">
+                @if (item.Image != null)
+                {
+                    var base64 = Convert.ToBase64String(item.Image);
+                    var img = string.Format("data:image/jpg;base64,{0}", base64);
+                    <img src="@img" class="rounded-circle" style="max-width: 150px; height: 150px" />
+                }
+                else
+                {
+                    <img src="~/images/noimage.jpg" class="rounded-circle" style="max-width: 150px" />
+                }
+            </td>
+            <td class="align-middle">
                 @Html.DisplayFor(modelItem => item.FirstName)
             </td>
-            <td>
+                <td class="align-middle">
                 @Html.DisplayFor(modelItem => item.LastName)
             </td>
-            <td>
+            <td class="align-middle">
                 @Html.DisplayFor(modelItem => item.Nationality)
             </td>
-            <td>
+            <td class="align-middle">
                 @Html.DisplayFor(modelItem => item.BirthDate)
             </td>
-            <td>
+            <td class="align-middle">
                 <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.DirectorId">Edit</a> |
                     <a class="btn btn-info" asp-action="Details" asp-route-id="@item.DirectorId">Details</a> |
                     <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.DirectorId">Delete</a>
